nav bar accent changes

--- a/calculadora.html
+++ b/calculadora.html
@@ -36,12 +36,12 @@
             <a
               href="contacto.html"
               class="navbar_contents"
-              style="font-weight: bolder; font-size: larger"
+              
               >Contacto</a
             >
           </li>
           <li>
-            <a href="calculadora.html" class="navbar_contents">Cotizacion</a>
+            <a href="calculadora.html" class="navbar_contents"style="font-weight: bolder; font-size: larger">Cotizacion</a>
           </li>
         </ul>
       </nav>
