nav bar changes 2

--- a/calculadora.html
+++ b/calculadora.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="navbar.css" />
     <link rel="stylesheet" href="footer.css" />
     <link rel="stylesheet" href="style.css" />
-
-
   </head>
   <body>
     <header class="navbar">
@@ -26,22 +24,22 @@
       <nav>
         <ul style="flex: auto">
           <li>
-            <a href="#inicio" class="navbar_contents">Inicio</a>
+            <a href="index.html" class="navbar_contents">Inicio</a>
           </li>
           <li><a href="nosotros.html" class="navbar_contents">Nosotros</a></li>
           <li>
             <a href="servicios.html" class="navbar_contents">Servicios</a>
           </li>
           <li>
-            <a
-              href="contacto.html"
-              class="navbar_contents"
-              
-              >Contacto</a
-            >
+            <a href="contacto.html" class="navbar_contents">Contacto</a>
           </li>
           <li>
-            <a href="calculadora.html" class="navbar_contents"style="font-weight: bolder; font-size: larger">Cotizacion</a>
+            <a
+              href="#calculadora"
+              class="navbar_contents"
+              style="font-weight: bolder; font-size: larger"
+              >Cotizacion</a
+            >
           </li>
         </ul>
       </nav>
