--- a/contacto.html
+++ b/contacto.html
@@ -103,17 +103,20 @@
       <nav>
         <ul style="flex: auto">
           <li>
-            <a
-              href="#inicio"
-              class="navbar_contents"
-              >Inicio</a
-            >
+            <a href="index.html" class="navbar_contents">Inicio</a>
           </li>
           <li><a href="nosotros.html" class="navbar_contents">Nosotros</a></li>
           <li>
             <a href="servicios.html" class="navbar_contents">Servicios</a>
           </li>
-          <li><a href="contacto.html" class="navbar_contents" style="font-weight: bolder; font-size: larger">Contacto</a></li>
+          <li>
+            <a
+              href="#contacto"
+              class="navbar_contents"
+              style="font-weight: bolder; font-size: larger"
+              >Contacto</a
+            >
+          </li>
           <li>
             <a href="calculadora.html" class="navbar_contents">Cotizacion</a>
           </li>
