--- a/contacto.html
+++ b/contacto.html
@@ -30,8 +30,38 @@
         </style>
     </head>
     <body>
+        <header class="navbar">
+            <div style="display: flex">
+              <img
+                src="resources/logo.png"
+                style="height: 40px; width: 40px; padding-left: 20px"
+              />
+              <div style="padding-left: 25px; font-weight: bold; font-size: 25px">
+                Vanguard Consulting
+              </div>
+            </div>
+
+            <nav>
+                <ul style="flex: auto">
+                  <li><a href="index.html" class="navbar_contents">Inicio</a></li>
+                  <li><a href="nosotros.html" class="navbar_contents">Nosotros</a></li>
+                  <li>
+                    <a
+                      href="servicios.html"
+                      class="navbar_contents"
+                      
+                      >Servicios</a
+                    >
+                  </li>
+                  <li><a href="#contacto" class="navbar_contents" style="font-weight: bolder; font-size: larger">Contacto</a></li>
+                  <li>
+                    <a href="calculadora.html" class="navbar_contents">Cotizacion</a>
+                  </li>
+                </ul>
+              </nav>
+        </header>
         <div class="container">
-            <h1 class="text-3xl font-bold text-white my-4 text-center">Contacto</h1>
+            <h1 class="card">Contacto</h1>
             <div class="card">
                 <div class="grid-container">
                     <div class="contact-info">
